--- a/_config.yml
+++ b/_config.yml
@@ -93,12 +93,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/keshavvinayak01"
+  github           : "keshavvinayak01"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/keshavvinayakjha/"
+  instagram        : "keshavvinayakjha"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/keshavvinayakjha/"
+  linkedin         : "keshavvinayakjha"
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   twitter          : "replacethistwitterhandle"
