--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Systems R&D"
   location         : "Bengaluru, Karnataka, India"
   employer         :
-  googlescholar    : "scholar.google.co.in/citations?hl=en&user=TZoq7jgAAAAJ"
+  googlescholar    : "http://scholar.google.co.in/citations?hl=en&user=TZoq7jgAAAAJ"
   email            : "keshavvinayakjha@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
